software-center (1.1.2) UNRELEASEDlucid; urgency=low

  * merge lp:~rugby471/software-center/software-store-andrew,
    many thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Dec 2009 09:58:41 +0100

software-center (1.1.1) lucid; urgency=low

  * Hide packages that are also part of a application. This
    means that abiword will only show up once in the center
    (as a application) and not as a package at all. 
  * profiling and search improvements
  * merge lp:~benweissmann/software-center/search-greylist, many
    thanks
  * merge lp:~glatzor/software-center/glatzor, many thanks
  * softwarecenter/db/database.py:
    - support comma expansion as in https://wiki.ubuntu.com/SoftwareCenter
      under "Searching for multiple package names"
  * softwarecenter/distro/Ubuntu.py:
    - string fixes (thanks to shane fagan), LP: #493618

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Dec 2009 18:32:13 +0100

software-center (1.1) lucid; urgency=low

  [ Michael Vogt ]
  * merged from Andrew Higginson, many thanks
    - fix hardcoded fonts (LP:#456604)
    - changed paste menu item to be ctrl+V
  * merged from Luke Symes, many thanks:
    - add suppoprt for authenticated proxies
  * softwarecenter/view/appdetailsview.py:
    - support uris in the app description (LP: #454246)
    - fix in details view
    - use regexp 
    - fix test
  * softwarecenter/view/dialogs.py:
    - make removal dialog modal (LP: #455327)
  * debian/control:
    - add recommends on python-launchpad-integration
  * softwarecenter/distro/Ubuntu.py:
    - add distro backend class that dynamically detects what distro
      to use and move distro specifc stuff (like screenshot url etc)
      there
    - move maitainance end calculation here
  * softwarecenter/view/softwarepane.py:
    - default to new pathbar
  * softwarecenter/backend/aptd.py:
    - move the aptdaemon backend code here
  * softwarecenter/utils.py:
    - move proxy code into a generic utility function